Menu hamburger functional
I've created a Activity (Bass) that extends AppCompatActivity, and override onCreateOptionsMenu and onOptionsItemSelected functions.
And then, in the other activities, instead of extending AppCompatActivity, it's just necessarily extend Base Activity.

--- a/TP1/app/src/main/AndroidManifest.xml
+++ b/TP1/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".Question4" />
         <activity android:name=".Question5" />
         <activity android:name=".Resume" />
-        <activity android:name=".Question1"></activity>
+        <activity android:name=".Question1" />
+        <activity android:name=".Base"></activity>
     </application>
 
 </manifest>
